# ascend-commerce-ace

./: .gitignore  README.md  conftest.py  install.sh  pyproject.toml  requirements-skills.txt
skills-admin/ace-brand-discord-deployment/: SKILL.md
skills-admin/ace-brand-discord-deployment/references/: prefill-priming.md  security.md  soul-rejection-pattern.md
skills-admin/ace-brand-discord-go-live/: SKILL.md
skills-admin/ace-brand-discord-go-live/references/: guardrails.md
skills-admin/ace-brand-discord-setup/: SKILL.md
skills-admin/ace-brand-validation/: SKILL.md
skills-admin/ace-discord-channel-mapping/: SKILL.md
skills-admin/ace-operator-console/: SKILL.md
skills-admin/create-brand/: SKILL.md
skills-admin/create-brand/scripts/: create-brand.sh
skills/_lib/: __init__.py  agent_trace.py  brand.py  chunking.py  drive.py  knowledge.py  log_cli.py  models.py  sheet.py  slack_cli.py  store.py  trace.py
skills/_lib/tests/: test_agent_trace.py  test_chunking.py  test_knowledge.py  test_sheet.py  test_slack_cli.py  test_store.py  test_trace.py
skills/ace/_lib/: __init__.py  embeddings.py  growi.py  log_cli.py  moderation.py  (+1 more)
skills/admin-commands/: SKILL.md
skills/answer-from-kb/: SKILL.md
skills/campaign-workflow/: SKILL.md
skills/classify-question/: SKILL.md
skills/creator-deal-lookup/: SKILL.md
skills/daily-digest/: SKILL.md
skills/detect-sentiment/: SKILL.md
skills/escalate-to-team/: SKILL.md
skills/get-campaigns/: SKILL.md
skills/get-knowledge/: SKILL.md
skills/ingest-knowledge/: SKILL.md
skills/moderate-message/: SKILL.md
skills/nudge-inactive/: SKILL.md
skills/post-announcement/: SKILL.md
skills/run-onboarding/: SKILL.md
skills/setup-brand/: SKILL.md
skills/sweep-unanswered/: SKILL.md
skills/weekly-reminders/: SKILL.md
tests/: test_install.py
tests/evals/: llm_eval.py  model.py  run.py  runner.py  test_eval_gate.py  test_llm_eval.py
(+72 files in other folders)
