[project]
name = "ascomm-ace"
version = "0.0.1"
description = "Ace (Ascend Community Expert) — a Hermes skill bundle for TikTok Shop creator Discord communities"
requires-python = ">=3.11"
# Kept deliberately minimal. The core (store, chunking, search, ingest) runs on the stdlib so
# `pytest` works with zero installs. The extras below are only needed at runtime by skill scripts.
dependencies = []

[project.optional-dependencies]
# Runtime-only deps for skill scripts (HTTP embeddings, Google Drive, templating).
# Installed into the Hermes container (or auto-installed from declared skill deps — Phase 0 spike).
runtime = [
    "httpx>=0.27",
    "jinja2>=3.1",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["skills", "tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
