[project]
name = "ascomm-ace"
version = "0.0.1"
description = "Ace (Ascend Community Expert) — a Hermes skill bundle for TikTok Shop creator Discord communities"
requires-python = ">=3.11"
# Deliberately minimal. The only hard dependency is PyYAML (brand knowledge is authored as YAML);
# everything else (the SQLite store, moderation, digest, etc.) is stdlib.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Runtime-only deps for skill scripts: HTTP calls (OpenRouter eval / Growi / Slack).
# Installed into the Hermes container (or auto-installed from declared skill deps — Phase 0 spike).
runtime = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["skills", "tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
